# gptsh

./: .gitignore  .gptsh_config  .gptsh_history  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTICE  README.md  pony_names.txt
src/: chat.rs  cli.bak  cli.rs  main.rs  models.rs  openai.rs  shell.bak  shell.rs  tests.rs  utils.rs
tests/: integration_test.rs
