[package]
name = "gptsh"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
regex = "1.10.6"
dirs = "5.0.1"
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.2"


